--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,6 @@
       @apply py-2 px-5 bg-gray-800 text-white text-xs tracking-wider rounded shadow-md hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
     }
     .input {
-      @apply w-full border border-gray-300 px-3 py-1 mt-1 bg-white focus:bg-gray-100 rounded focus:shadow outline-none focus:ring-2 focus:ring-gray-600 focus:ring-opacity-90;
+      @apply w-full border border-gray-300 px-3 py-2 md:py-1 mt-1 bg-white focus:bg-gray-100 rounded focus:shadow outline-none focus:ring-2 focus:ring-gray-600 focus:ring-opacity-90;
     }
   }
